# data-modelling-tool

./: .env-template  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-template  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  README.md  README_Contained.md  README_DMT.md  README_Plugin.md  blueprint-index.md  clean-architecture.html  contribute-guide.html  cosmodb-set-autoscale.sh  developer-manual.html  docker-compose.azure.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.sim-radix.yml  docker-compose.testci.yml  docker-compose.win10.yml  docker-compose.windows.yml  docker-compose.yml  dodo.py  entity-index.md  index.html  radixconfig.yaml  report-issue.html  reset-database.md  reset-db.env-template  reset-db.sh  reset_db.sh  sitemap.xml  submit-pull-request.html  travis-scripts.sh  user-manual.html
api/: .bandit  .behaverc  .coveragerc  .dockerignore  .flake8  Dockerfile  Dockerfile.win10  README.md  app.py  config.py  coverage.txt  generate_system_blueprints.py  init.sh  load_generators.py  package_1.json  pip.ini  pyproject.toml  reset-application.sh  reset-database.sh  temp.txt  wait-for-it.sh
api/classes/: blueprint.py  blueprint_attribute.py  data_source.py  dimension.py  dto.py  files.py  index.py  index_v2.py  matrix.py  package_request.py  recipe.py  root_package.py  schema.py  storage_recipe.py  subpackage.py  tree_node.py  ui_recipe.py
api/core/: README.md  enums.py  tree_generator.py  utility.py
api/core/domain/: DocumentDto.py  attribute_reference.py  base.py  blueprint.py  data_source.py  document.py  dto.py  entity.py  index.py  models.py  package.py  recipe.py  root_package.py  schema.py  storage_recipe.py  sub_package.py  template.py  ui_recipe.py
api/core/repository/: __init__.py  data_source_repository.py  db_client_interface.py  repository_exceptions.py  repository_factory.py  template_repository.py
api/core/rest/: Actions.py  Blueprints.py  DataSource.py  Document.py  Entity.py  Explorer.py  Index.py  System.py
api/core/serializers/: add_file_json_serializer.py  create_data_source_serializer.py  document_json_serializer.py  document_with_template_serializer.py  dto_json_serializer.py  get_data_sources_serializer.py  index_json_serializer.py  package_json_serializer.py
api/core/service/: application_service.py  create_application_utils.py  document_service.py
api/core/shared/: response_object.py  templates.py  use_case.py
api/core/use_case/: add_document_use_case.py  add_entity_file_to_package_use_case.py  add_file_to_package_use_case.py  add_file_use_case.py  add_package_to_package_use_case.py  add_package_use_case.py  add_root_package_use_case.py  create_application_use_case.py  create_data_source_use_case.py  create_entity.py  create_index_use_case.py  export_use_case.py  generate_code_with_plugin.py  generate_index_use_case.py  generate_index_use_case_v2.py  generate_json_schema_use_case.py  generate_python_code.py  get_application_settings_use_case.py  get_blueprints_use_case.py  get_data_sources_use_case.py  get_document_by_path_use_case.py  get_document_use_case.py  get_document_with_template_use_case.py  instantiate_entity.py  move_file_use_case.py  move_package_use_case.py  move_root_package_use_case.py  remove_file_use_case.py  (+11 more)
api/data_source_plugins/: mongodb.py
api/home/: dmt_settings.json  settings.json
api/rest/: __init__.py  blueprint.py  blueprint_to_json_schema.py  common.py  data_sources.py  document.py  document_to_schema.py  entity.py  form.py  form_to_schema.py  index.py  models.py  packages.py  schema.py  template.py  transformer.py
api/schemas/: update-boxes.json
api/services/: data_modelling_document_service.py  database.py
api/src/: .behaverc  app.py  auth_middleware.py  config.py  enums.py  init.sh  newapp.py  reset-application.sh  store_headers_middleware.py
api/tests/: README.md  test_index.py  util_tests.py
api/tests_bdd/: README.md  data_source.feature  document-2.feature  document.feature  environment.py  explorer.feature  index.feature  results.py  schema.feature  template.feature  transformer.feature
api/utils/: debugging.py  enums.py  files.py  form_to_schema.py  form_to_ui_schema.py  generate_name.py  get_data_type.py  group_by.py  help_functions.py  helper_functions.py  logging.py  numbers.py  package_import.py  schema_tools.py  uuid.py
local-container/: Dockerfile  docker-compose.yml  init.sh  pyproject.toml  wrapper.py
sre-wrapper/: Dockerfile  README.md  docker-compose.yaml  init.sh  job_wrapper.py  pyproject.toml
(+2016 files in other folders)
