[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for data-modelling-tool"
authors = ["Stig Ofstad <stoo@equinor.com>","Christoffer","Eirik"]
license = "TBD"

[tool.poetry.dependencies]
python = "3.9.*"
flask = "^1.0"
urllib3 = "^1.25.9"
toml = "^0.10.1"
dmss-api = "^0.3.9"
progress = "^1.5"
emoji = "^1.2.0"
azure-mgmt-containerinstance = "^8.0.0"
redis = "^3.5.3"
stringcase = "^1.2.0"
Jinja2 = "^3.0.1"
azure-mgmt-resource = "^20.0.0"
azure-identity = "^1.7.0"

[tool.poetry.dev-dependencies]
pydevd = "^1.6"
pytest = "^5.1"
behave = "1.2.6"
colorclass = "1.0.1"
terminaltables = "3.1.0"
snapshottest = "0.5.1"
deepdiff = "4.0.7"
pre-commit = "^2.9.2"
pygments = "2.4.1"
coverage = "^5.0.3"
flake8 = "^3.7.9"
bandit = "^1.6.2"
safety = "^1.8.7"
pymongo = "^3.10.1"
dictdiffer = "^0.8.1"
black = "^21.9b0"

[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \dmss
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
