[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for data-modelling-tool"
authors = ["Stig Ofstad <stoo@equinor.com>","Christoffer","Eirik"]
license = "TBD"

[tool.poetry.dependencies]
python = "3.9.*"
flask = "^2.1.1"
urllib3 = "^1.25.9"
toml = "^.10.1"
dmss-api = "^0.3.17"
progress = "^1.5"
emoji = "^1.2.0"
azure-mgmt-containerinstance = "^9.1.0"
redis = "^4.2.2"
stringcase = "^1.2.0"
Jinja2 = "^3.0.1"
azure-mgmt-resource = "^21.0.0"
azure-identity = "^1.7.0"
APScheduler = "^3.8.1"
docker = "^5.0.3"


[tool.poetry.dev-dependencies]
pydevd = "^1.6"
pytest = "^7.1.1"
behave = "1.2.6"
colorclass = "^2.2.2"
terminaltables = "^3.1.10"
snapshottest = "^0.6.0"
deepdiff = "^5.7.0"
pre-commit = "^2.9.2"
pygments = "^2.7.4"
coverage = "^6.3.2"
flake8 = "^4.0.1"
bandit = "^1.6.2"
safety = "^1.8.7"
pymongo = "^3.10.1"
dictdiffer = "^0.9.0"
black = "^22.3.0"


[tool.black]
line-length = 119
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \dmss
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
