[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for data-modelling-tool"
authors = ["Stig Ofstad <stoo@equinor.com>","Christoffer","Eirik"]
license = "TBD"

[tool.poetry.dependencies]
python = "^3.10.4"
urllib3 = "^1.26.11"
toml = "^0.10.1"
dmss-api = "^0.3.17"
progress = "^1.6"
emoji = "^2.0.0"
azure-mgmt-containerinstance = "^9.2.0"
redis = "^4.3.4"
stringcase = "^1.2.0"
Jinja2 = "^3.1.2"
azure-mgmt-resource = "^21.1.0"
azure-identity = "^1.10.0"
APScheduler = "^3.9.1"
docker = "^5.0.3"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
websockets = "10.2"  # TODO: Locked due to build issues with 10.3


[tool.poetry.dev-dependencies]
pydevd = "^2.8.0"
pytest = "^7.1.1"
colorclass = "^2.2.2"
terminaltables = "^3.1.10"
snapshottest = "^0.6.0"
deepdiff = "^5.8.1"
pre-commit = "^2.19.0"
pygments = "^2.12.0"
coverage = "^6.4.2"
flake8 = "^5.0.4"
bandit = "^1.7.4"
safety = "^2.1.1"
pymongo = "^3.10.1"
dictdiffer = "^0.9.0"
black = "^22.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
target-version = ['py10']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \dmss
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
