[tool.poetry]
name = "DMT_Job_Initscript"
version = "0.1.0"
description = "Initscript wrapper for SIMA Runtime Service used by Data Modelling Tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
dmss-api = "^0.3.8"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
